--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>talk-link-chatbots-hub</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Talk Link - AI Chatbot Hub</title>
+    <meta name="description" content="Create and manage AI chatbots with custom knowledge bases. Build intelligent conversational agents for your business." />
+    <meta name="author" content="Talk Link" />
 
-    <meta property="og:title" content="talk-link-chatbots-hub" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Talk Link - AI Chatbot Hub" />
+    <meta property="og:description" content="Create and manage AI chatbots with custom knowledge bases. Build intelligent conversational agents for your business." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/Chatbot.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Talk Link - AI Chatbot Hub" />
+    <meta name="twitter:description" content="Create and manage AI chatbots with custom knowledge bases." />
+    <meta name="twitter:image" content="/Chatbot.png" />
   </head>
 
   <body>
